[tool.poetry]
name = "ultrasearch"
version = "0.1.0"
description = "Searching for ultramarathons across the globe"
authors = ["Paul Baines <paul.baines@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
httpx = "^0.21.3"
supabase = "^0.5.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
